# kage

./: .gitignore
kage/: Makefile  README  autogen.sh  configure.ac
kage/include/: Makefile.am
kage/include/kage/: application.hh  application_state.hh  fsm.hh  globals.hh  input.hh  input_buffered.hh  kage.hh  logging.hh  ogre_application.hh  ois_input_buffered.hh  state.hh  sys_graphics.hh  sys_graphics_ogre.hh  sys_input.hh  sys_input_ois.hh  system.hh  task.hh  utils.hh
kage/include/kage/core/: Makefile.am  core.hh  globals.hh  graphics_system.hh  input_system.hh  sys_application.hh  sys_fsm.hh  sys_system.hh  sys_task.hh
kage/include/kage/ogre/: Makefile.am  graphics_system.hh  ogre.hh
kage/include/kage/ois/: Makefile.am  input_system.hh  ois.hh
kage/kage/core/include/kage/core/: graphics_system.hh  input_system.hh  utils_logging.hh
kage/kage/core/src/kage/core/: sys_system.cc  sys_task.cc  utils_logging.cc
kage/kage/ogre/src/kage/ogre/: graphics_system.cc
kage/src/kage/: Makefile.am  application.cc  application_state.cc  fsm.cc  input.cc  input_buffered.cc  kage.pc.in  logging.cc  ogre_application.cc  ois_input_buffered.cc  state.cc  sys_graphics_ogre.cc  sys_graphics_ogre.hh  sys_input_ois.cc  system.cc  task.cc
kage/src/kage/core/: Makefile.am  input_system.cc  kage-0.1.pc  kage-0.1.pc.in  kage.pc  kage.pc.in  sys_application.cc  sys_fsm.cc  sys_system.cc  sys_task.cc  utils_logging.cc
kage/src/kage/ogre/: Makefile.am  graphics_system.cc  kage-ogre.pc.in
kage/src/kage/ois/: Makefile.am  input_system.cc  kage-ois.pc.in
