kageincdir = $(includedir)/kage/core/
kageinc_HEADERS = $(top_srcdir)/include/kage/core/globals.hh \
                  $(top_srcdir)/include/kage/core/graphics_system.hh \
                  $(top_srcdir)/include/kage/core/input_system.hh \
                  $(top_srcdir)/include/kage/core/core.hh \
                  $(top_srcdir)/include/kage/core/sys_application.hh \
                  $(top_srcdir)/include/kage/core/sys_fsm.hh \
                  $(top_srcdir)/include/kage/core/sys_system.hh \
                  $(top_srcdir)/include/kage/core/sys_task.hh \
                  $(top_srcdir)/include/kage/core/utils_logging.hh
